# WASM-Hasher

./: Cargo.toml  README.md  index.html  index.js
src/: lib.rs
