[package]
name = "wasm_hasher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
md-5 = "0.10.5"
sha1 = "0.10.5"
sha2 = "0.10.7"
sha3 = "0.10.8"
wasm-bindgen = "0.2"
